# Buganime

./: pyproject.toml
.github/workflows/: lint.yml  test.yml
buganime/: buganime.py
