[tool.poetry]
name = "buganime"
version = "0.1.0"
description = ""
authors = ["Bar Perach <barp@google.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
requests = "^2.28.1"
tqdm = "^4.64.1"
numpy = "^1.23.5"
retry = "^0.9.2"
torch = "^1.13.0"
torchvision = "^0.14.0"
torchaudio = "^0.13.0"
pywin32 = [
  { version = '*', platform = 'win32' }
]

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pylint = "^2.15.8"
pylint-pytest = "^1.1.2"
flake8 = "^6.0.0"
mypy = "^0.991"
tqdm-stubs = "^0.2.1"
types-retry = "^0.9.9"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
